<resources>
    <string name="app_name">Wintec Degree Planner</string>
    <string name="title_activity_module_v2">ModuleV2</string>
    <string name="Tab_All">All</string>
    <string name="Tab_Year1">Year 1</string>
    <string name="Tab_Year2">Year 2</string>
    <string name="Tab_Year3">Year 3</string>
    <string name="title_activity_geoff_test">GeoffTest</string>
    <string name="title_activity_stu_plan">StuPlan</string>


    <!-- admin string literals/constants -->
    <string name="adminWelcome">Welcome To Admin Area</string>
    <string name="manageStudents">Manage Students</string>
    <string name="selectStudents">Select a student or create a new entry to start building a plan.</string>
    <string name="searchStudent">Search for a Student</string>
    <string name="title_activity_spmodule_detail">SPModuleDetail</string>


    <!--cw strings-->
    <string name="db">Database Architecture</string>
    <string name="mwd">Multimedia and Web Development</string>
    <string name="ne">Network Engineering</string>
    <string name="se">Software Engineering</string>

    <!-- GG Yes and No  -->
    <string name="yes">Yes</string>
    <string name="no">No</string>


</resources>
