<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminMainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/llTop"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorDPMbackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:id="@+id/wintecLogo"
            android:layout_width="160dp"
            android:layout_height="76dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/wintec_logo_logotipo" />

        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="500dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/menu_dots"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        android:padding="4dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTop"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/adminWelcome"/>

    <TextView
        android:id="@+id/tvHeading1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:textColor="@color/adminText"
        android:text="@string/manageStudents"/>

    <TextView
        android:id="@+id/tvHeading2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:textSize="14dp"
        android:layout_marginTop="5dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading1"
        android:textColor="@color/adminText"
        android:text="@string/selectStudents"/>

    <EditText
        android:id="@+id/etSearchStudent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:textSize="14dp"
        android:layout_marginTop="5dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading2"
        android:hint="@string/searchStudent"/>

    <ListView
        android:id="@+id/lvStudents"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSearchStudent"
        app:layout_constraintEnd_toEndOf="parent"
        >

    </ListView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnAddStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/plus_white_32"
        android:layout_margin="16dp" />

</android.support.constraint.ConstraintLayout>