<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDPMWhite"
    tools:context=".otsStudentAdmin">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="Please choose your stream"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_bold"
        android:text="Welcome."
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivDBA"
        android:layout_width="697dp"
        android:layout_height="197dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/stu_main_menu_modulebox" />

    <TextView
        android:id="@+id/tvDBA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/roboto"
        android:text="@string/db"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivDBA"
        app:layout_constraintEnd_toEndOf="@+id/ivDBA"
        app:layout_constraintTop_toTopOf="@+id/ivDBA"
        app:layout_constraintVertical_bias="0.44" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="113sp"
        android:layout_height="134dp"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivDBA"
        app:layout_constraintStart_toStartOf="@+id/ivDBA"
        app:layout_constraintTop_toTopOf="@+id/ivDBA"
        app:layout_constraintVertical_bias="0.428"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/ivMWD"
        android:layout_width="697dp"
        android:layout_height="197dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDBA"
        app:srcCompat="@drawable/stu_main_menu_modulebox" />

    <TextView
        android:id="@+id/tvMWD"
        android:layout_width="389dp"
        android:layout_height="96dp"
        android:layout_marginEnd="88dp"
        android:fontFamily="@font/roboto"
        android:text="@string/mwd"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivMWD"
        app:layout_constraintEnd_toEndOf="@+id/ivMWD"
        app:layout_constraintTop_toTopOf="@+id/ivMWD"
        app:layout_constraintVertical_bias="0.326" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="113dp"
        android:layout_height="110dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="@+id/ivMWD"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:srcCompat="@drawable/ic_launcher_background" />


    <ImageView
        android:id="@+id/ivNE"
        android:layout_width="697dp"
        android:layout_height="197dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMWD"
        app:srcCompat="@drawable/stu_main_menu_modulebox" />

    <TextView
        android:id="@+id/tvNE"
        android:layout_width="391dp"
        android:layout_height="59dp"
        android:layout_marginEnd="88dp"
        android:fontFamily="@font/roboto"
        android:text="@string/ne"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivNE"
        app:layout_constraintEnd_toEndOf="@+id/ivNE"
        app:layout_constraintTop_toTopOf="@+id/ivNE"
        app:layout_constraintVertical_bias="0.485" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="113dp"
        android:layout_height="110dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivNE"
        app:layout_constraintStart_toStartOf="@+id/ivNE"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/ivSE"
        android:layout_width="697dp"
        android:layout_height="197dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivNE"
        app:srcCompat="@drawable/stu_main_menu_modulebox" />

    <TextView
        android:id="@+id/tvSE"
        android:layout_width="391dp"
        android:layout_height="59dp"
        android:layout_marginEnd="88dp"
        android:fontFamily="@font/roboto"
        android:text="@string/se"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivSE"
        app:layout_constraintEnd_toEndOf="@+id/ivSE"
        app:layout_constraintTop_toTopOf="@+id/ivSE"
        app:layout_constraintVertical_bias="0.427" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="113dp"
        android:layout_height="110dp"
        android:layout_marginStart="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivSE"
        app:layout_constraintStart_toStartOf="@+id/ivSE"
        app:layout_constraintTop_toTopOf="@+id/ivSE"
        app:layout_constraintVertical_bias="0.418"
        app:srcCompat="@drawable/ic_launcher_background" />


</android.support.constraint.ConstraintLayout>